--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#97f3f7",
-        "activityBar.background": "#97f3f7",
+        "activityBar.activeBackground": "#ffffff99",
+        "activityBar.background": "#ffffff99",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#f46bee",
+        "activityBarBadge.background": "#df9f9f",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#15202b99",
-        "editorGroup.border": "#97f3f7",
-        "panel.border": "#97f3f7",
-        "sash.hoverBorder": "#97f3f7",
-        "sideBar.border": "#97f3f7",
-        "tab.activeBorder": "#97f3f7",
-        "titleBar.activeBackground": "#68edf3",
+        "editorGroup.border": "#ffffff99",
+        "panel.border": "#ffffff99",
+        "sash.hoverBorder": "#ffffff99",
+        "sideBar.border": "#ffffff99",
+        "tab.activeBorder": "#ffffff99",
+        "titleBar.activeBackground": "#e7e7e799",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.border": "#68edf3",
-        "titleBar.inactiveBackground": "#68edf399",
+        "titleBar.border": "#e7e7e799",
+        "titleBar.inactiveBackground": "#e7e7e799",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#68edf3"
+    "peacock.color": "#e7e7e799"
 }
